Added check the value